components/testd2-componentos/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-app
    appstudio.openshift.io/component: testd2-componentos
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltestd2-componentos
  namespace: test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-testd2-componentos
    weight: null
status: {}
